--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -30,6 +30,9 @@ archives:
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
       {{- if .Arm }}v{{ .Arm }}{{ end -}}
+    format_overrides:
+      - goos: windows
+        formats: [ zip ]
 
 release:
   disable: true
