--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -35,10 +35,9 @@ archives:
         formats: [ zip ]
 
 release:
-  disable: true
   name_template: "v{{ .Version }}"
   footer: |
-    **Full Changelog**: https://github.com/SpoilerRules/pipsi-utils/compare/{{ .PreviousTag }}...{{ if .IsNightly }}nightly{{ else }}{{ .Tag }}{{ end }}
+    **Full Changelog**: https://github.com/SpoilerRules/pipsi-utils/compare/{{ .PreviousTag }}...{{ .Tag }}
 
 changelog:
   disable: false
